--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-Test
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Responsive Mega Menu</title>
+
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible"a content="IE=edge,chrome=1" />
+        <meta name="viewport" content="width=device-width" />
+
+        <!-- custom style -->
+        <link rel="stylesheet" href="css/style.css" >
+    </head>
+    <body>
+        <!-- header -->
+        <header>
+
+        </header>
+
+        <!-- page content -->
+        <div class="page">
+
+        </div>
+
+        <!-- footer -->
+        <footer>
+
+        </footer>
+    </body>
+</html>
