add js minification command to the package.json

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
         <!-- header -->
         <header>
 
+            <!-- MEGAMENU EXAMPLE START -->
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+            </ul>
+            <!-- MEGAMENU EXAMPLE END -->
+
         </header>
 
         <!-- page content -->
@@ -25,5 +33,11 @@
         <footer>
 
         </footer>
+
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+
+        <!-- custom js -->
+        <script src="js/jquery.1rosehip-mega-menu.js"></script>
     </body>
 </html>
