--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <a href="https://github.com/1rosehip/responsive-mega-menu/archive/master.zip" class="btn" title=""><i class="fa fa-download" aria-hidden="true"></i> Download</a>
             <a href="#" class="btn" id="docs-btn" title=""><i class="fa fa-file" aria-hidden="true"></i> Get Started</a>
 
-            <a class="photo-credit" href="http://unsplash.com/@albertorestifo?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" title="" target="_blank" rel="noopener noreferrer" title="Photo Credit">Photo by Alberto Restifo on Unsplash</a>
+            <a class="photo-credit" href="http://unsplash.com/@acmatthews?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" title="" target="_blank" rel="noopener noreferrer" title="Photo Credit">Photo by Andy  Matthews on Unsplash</a>
         </section>
 
         <!-- description -->
