--- a/index.html
+++ b/index.html
@@ -101,8 +101,39 @@
 
         <!-- footer -->
         <footer>
-            1rosehip &copy;
-            <span id="year"></span>
+
+            <ul class="footer-social-menu">
+
+                <li>
+                    1rosehip &copy; <span id="year"></span>
+                </li>
+
+                <li>
+                    <a href="#" title="">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" title="">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" title="">
+                        <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" title="">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" title="">
+                        <i class="fa fa-google-plus" aria-hidden="true"></i>
+                    </a>
+                </li>
+            </ul>
         </footer>
 
         <!-- jQuery -->
