--- a/index.html
+++ b/index.html
@@ -109,30 +109,32 @@
                 </li>
 
                 <li>
-                    <a href="#" title="">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" title="">
+                    <a href="https://twitter.com/onerosehip" title="" target="_blank" rel="noopener noreferrer">
                         <i class="fa fa-twitter" aria-hidden="true"></i>
                     </a>
                 </li>
+
                 <li>
-                    <a href="#" title="">
+                    <a href="mailto:1rosehip@gmail.com" title="">
+                        <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://www.pinterest.com/1rosehip/" title="" target="_blank" rel="noopener noreferrer">
                         <i class="fa fa-pinterest-p" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#" title="">
-                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    <a href="https://github.com/1rosehip/" title="" target="_blank" rel="noopener noreferrer">
+                        <i class="fa fa-github" aria-hidden="true"></i>
                     </a>
                 </li>
-                <li>
-                    <a href="#" title="">
+                <!--li>
+                    <a href="#" title="" target="_blank" rel="noopener noreferrer">
                         <i class="fa fa-google-plus" aria-hidden="true"></i>
                     </a>
-                </li>
+                </li-->
             </ul>
         </footer>
 
